--- a/styles/style.css
+++ b/styles/style.css
@@ -229,6 +229,15 @@ a {
   background-color: var(--hover-white);
 }
 
+.button-sm {
+  padding: 8px 12px;
+  max-height: fit-content;
+}
+
+.button-md {
+  padding: 12px 20px;
+}
+
 /* Navbar Section */
 
 nav {
@@ -395,6 +404,7 @@ nav {
 .text-hover:active,
 .text-hover:focus {
   background-color: var(--light-primary);
+  outline-color: var(--outline-color);
 }
 
 .dropdown-toggle::after {
@@ -607,13 +617,6 @@ header {
   gap: 12px;
 }
 
-.calculator__card__header .icon {
-  padding: 12px;
-  border-radius: 100%;
-  background: var(--light-secondary);
-  max-height: 48px;
-}
-
 .calculator__cards h5 {
   color: var(--text-gray);
 }
@@ -646,14 +649,13 @@ header {
   max-width: 744px;
   width: 100%;
   height: 100%;
-  margin: auto auto ;
-  
-  display: flex ;
-  flex-direction: column;
-  justify-content: center ;
-  align-items: center ;
-}
+  margin: auto auto;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .calculator__modal .modal-header {
   padding: 0;
@@ -981,4 +983,169 @@ header {
 
 .footer_pattern {
   position: absolute;
+}
+
+/* Kacko Page */
+
+.input_important {
+  color: var(--secondary-color);
+}
+
+.form-gap {
+  display: flex;
+  gap: 12px;
+  align-items: end;
+}
+
+.form_input {
+  border-radius: 12px;
+  height: 40px;
+  padding: 8px 12px;
+  border: 1px solid #efefef;
+}
+
+.form_input.valid:focus {
+  outline: none;
+  box-shadow: 0px 1.5px 1px 0px #0000000d, 0px 0px 0px 4px #dc305529,
+    0px 0px 0px 1px #dc30553d;
+}
+
+/* .form_input.valid {
+  outline: none;
+  border: none;
+  box-shadow: 0 0 2px 2px var(--secondary-color);
+} */
+
+.form_input.invalid:focus {
+  outline: none;
+  box-shadow: 0px 1.5px 1px 0px #0000000d, 0px 0px 0px 1px #00a0703d,
+    0px 0px 0px 4px #00a07029;
+}
+
+.kacko {
+  max-width: 744px;
+  margin: 88px auto 84px;
+}
+
+.kacko-data {
+  max-width: 744px;
+  margin: 88px auto;
+}
+
+.kacko-data__item {
+  margin-bottom: 32px;
+}
+
+.data-table {
+  border: 1px solid #efefef;
+  border-radius: 12px;
+  padding: 16px;
+}
+
+.data-table-row {
+  border-bottom: 1px dashed var(--border-gray);
+  padding: 12px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.data-table-row:first-child {
+  padding: 0;
+  padding-bottom: 12px;
+}
+
+.data-table-row:last-child {
+  padding: 0;
+  padding-top: 12px;
+  border: none;
+}
+
+.data-table-row h5 {
+  flex: 38% 0;
+  max-width: 240px;
+  color: var(--text-gray);
+}
+
+.data-table-row h3 {
+  flex: 62% 0;
+  max-width: 440px;
+}
+
+.data-table-row.price {
+  display: block;
+  gap: 8px;
+}
+
+.data-table-row .price__item {
+  display: flex;
+  gap: 12px;
+  padding: 12px 16px;
+  width: 100%;
+  background: #0a0a0a08;
+  border-radius: 12px;
+}
+
+.data-table-row .payment_method {
+  display: flex;
+  gap: 12px;
+  margin-top: 12px;
+}
+
+.data-table-row .payment_method .payment_method__item.selected {
+  padding: 18px 0;
+  flex: 50% 0;
+  border: 1px solid var(--primary-color);
+  box-shadow: 0px 1.5px 1px 0px #0000000d, 0px 0px 0px 1px #00a0703d,
+    0px 0px 0px 4px #00a07029;
+
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.data-table-row .payment_method .payment_method__item {
+  padding: 18px 0;
+  flex: 50% 0;
+  border: 1px solid #EFEFEF;
+  box-shadow: 0px 4px 8px 0px #00000008, 0px 1px 1.5px 0px #00000008;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.data-table-row .payment_method__item .circle {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #efefef;
+  border-radius: 100%;
+  cursor: pointer;
+  position: absolute;
+  left: 12px;
+  top: 12px;
+}
+
+.data-table-row .payment_method__item.selected .circle {
+  width: 20px;
+  height: 20px;
+  border: 6px solid var(--primary-color);
+  border-radius: 100%;
+}
+
+.data_prev {
+  color: var(--primary-color);
+  cursor: pointer;
+  border: none;
+  background: white;
+}
+
+/* Kacko Payment Section */
+
+.kacko-payment {
+  max-width: 744px;
+  margin: 88px auto 84px;
 }
