--- a/styles/style.css
+++ b/styles/style.css
@@ -100,12 +100,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 100%;
   max-width: 744px;
   margin: 0 auto;
+  padding: 0 12px;
 }
 
 .container-sm {
   width: 100%;
   max-width: 360px;
   margin: 0 auto;
+  padding: 0 12px;
 }
 
 .lh-none {
@@ -216,6 +218,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .max-w-fit {
   max-width: fit-content;
+}
+
+.max-w-full{
+  max-width: 100% !important;
 }
 
 .rounded-sm {
@@ -1421,7 +1427,6 @@ input[type="radio"]:checked ~ .radio-label:before {
 }
 
 .kacko-data {
-  max-width: 744px;
   margin: 88px auto;
 }
 
@@ -1439,6 +1444,7 @@ input[type="radio"]:checked ~ .radio-label:before {
   border-bottom: 1px dashed var(--border-gray);
   padding: 12px 0;
   display: flex;
+  gap: 32px;
   justify-content: space-between;
 }
 
@@ -1455,7 +1461,7 @@ input[type="radio"]:checked ~ .radio-label:before {
 
 .data-table-row h5 {
   flex: 38% 0;
-  max-width: 240px;
+  /* max-width: 240px; */
   color: var(--text-gray);
 }
 
@@ -1496,6 +1502,7 @@ input[type="radio"]:checked ~ .radio-label:before {
   justify-content: center;
   align-items: center;
   position: relative;
+  
 }
 
 .data-table-row .payment_method .payment_method__item {
@@ -1520,6 +1527,7 @@ input[type="radio"]:checked ~ .radio-label:before {
   position: absolute;
   left: 12px;
   top: 12px;
+  transition: all .3s ease;
 }
 
 .data-table-row .payment_method__item.selected .circle {
@@ -1533,13 +1541,12 @@ input[type="radio"]:checked ~ .radio-label:before {
   color: var(--primary-color);
   cursor: pointer;
   border: none;
-  background: white;
+  background: transparent;
 }
 
 /* Kacko Payment Section */
 
 .kacko-payment {
-  max-width: 744px;
   margin: 88px auto 84px;
 }
 
@@ -1607,7 +1614,7 @@ input[type="radio"]:checked ~ .radio-label:before {
   position: absolute;
   top: 10px;
   right: 12px;
-  z-index: 15;
+  z-index: 1;
   width: 25px;
   height: 20px;
   cursor: pointer;
